add item view creation APIs
